Added GOOGLE_APPLICATION_CREDENTIALS (#2)
* Added GOOGLE_APPLICATION_CREDENTIALS

* Renamed GOOGLE_APPLICATION_CREDENTIALS beacause of a name conflict

Co-authored-by: Radek Poskocil <r.poskocil@quadient.com>

--- a/infrastructure/aws/ecs/backend.tmpl
+++ b/infrastructure/aws/ecs/backend.tmpl
@@ -34,6 +34,10 @@ ${jsonencode([
       "name": "POSTGRE_PWD",
       "value": "${postgre-pwd}"
     },
+    {
+       "name": "GOOGLE_APP_CREDENTIALS_CONTENT",
+       "value": "${google-app-credentials}"
+    },
     ],
     "resourceRequirements": null,
     "ulimits": null,
