--- a/infrastructure/aws/ecs/backend.tmpl
+++ b/infrastructure/aws/ecs/backend.tmpl
@@ -38,6 +38,10 @@ ${jsonencode([
        "name": "GOOGLE_APP_CREDENTIALS_CONTENT",
        "value": "${google-app-credentials}"
     },
+    {
+       "name": "JAVA_OPTS",
+       "value": "-Xmx=1024m"
+    }
     ],
     "resourceRequirements": null,
     "ulimits": null,
