--- a/infrastructure/aws/ecs/backend.tmpl
+++ b/infrastructure/aws/ecs/backend.tmpl
@@ -45,6 +45,10 @@ ${jsonencode([
     {
        "name": "ONESIGNAL_APP_ID",
        "value": "${onesignal-app-id}"
+    },
+    {
+       "name": "ENABLE_SWAGGER",
+       "value": "${enable-swagger}"
     }
     ],
     "resourceRequirements": null,
