smartemailing to github secret

--- a/infrastructure/aws/ecs/backend.tmpl
+++ b/infrastructure/aws/ecs/backend.tmpl
@@ -45,6 +45,15 @@ ${jsonencode([
     {
        "name": "ONESIGNAL_APP_ID",
        "value": "${onesignal-app-id}"
+    },
+    {
+       "name": "SMARTEMAILING_USER",
+       "value": "${smartemailing-user}"
+    },
+    {
+       "name": "SMARTEMAILING_PSW",
+       "value": "${smartemailing-psw}"
+    }
     }
     ],
     "resourceRequirements": null,
